--- a/alright-docs-api/package.json
+++ b/alright-docs-api/package.json
@@ -36,6 +36,7 @@
     "bcrypt": "^5.1.0",
     "class-validator": "^0.13.2",
     "firebase-admin": "^11.8.0",
+    "mongodb": "^5.6.0",
     "mongoose": "^7.2.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.2",
